--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 a, a:hover {
-    color: #a00;
+    color: #73ba30;
     text-decoration: none;
     word-break: break-word;
 }
@@ -66,7 +66,7 @@ blockquote {
     font-size: 1.4rem;
     font-family: Georgia,bitstream charter,serif;
     border-left: 3px solid;
-    border-color: #a00;
+    border-color: #73ba30;
     padding-left: 20px;
 }
 
@@ -80,7 +80,7 @@ blockquote em {
 }
 
 a,a:hover {
-    color: #a00;
+    color: #73ba30;
     text-decoration: none
 }
 
@@ -296,7 +296,7 @@ ul {
 }
 
 .post .draft-label {
-    color: #a00;
+    color: #73ba30;
     text-decoration: none;
     padding: 2px 4px;
     border-radius: 4px;
@@ -311,10 +311,10 @@ ul {
 
 .post-tags .tags a {
     display: inline-block;
-    border: 1px solid #a00;
+    border: 1px solid #73ba30;
     border-radius: 4px;
     padding: 0px 6px;
-    color: #a00;
+    color: #73ba30;
     line-height: 20px;
     font-size: 12px;
     text-decoration: none;
