Fixing broken link

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -6,7 +6,11 @@
 		{{ partial "head.html" . }}
 
 		<div>
-			<h1>Page Not Found</h1>
+            <h1>Page Not Found</h1>
+
+            <p>You came here, but it's not there.
+            That's right, I don't have the page you were looking for.
+            Perhaps you can <a href="https://github.com/gunnarmorling/morling.dev/issues">help me</a> to fix the problem?</p>
 		</div>
 	</div>
 	{{ partial "footer.html" . }}
