Misc. style improvements

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -25,6 +25,14 @@
     flex: 1;
 }
 
+ul {
+    list-style-position: outside;
+}
+
+.post ul {
+    margin-left: 1em;
+}
+
 ul.flat svg {
     max-height: 17px;
     margin-top: 15px;
