--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -71,3 +71,21 @@ b.conum *{color:inherit!important}
 .colist td:not([class]):first-child{padding:.4em .75em 0; line-height:1; vertical-align:top;}
 .colist td:not([class]):first-child img{max-width:none}
 .colist td:not([class]):last-child{padding:.25em 0}
+
+table.linenotable td.code {
+    padding-left: .75em;
+}
+
+table.linenotable td.linenos {
+    border-right: 1px solid rgba(255,255,255,.35);
+    opacity: .35;
+    padding-right: .5em;
+}
+
+.literalblock pre, .listingblock > .content > pre {
+    padding: 0.75em;
+}
+
+.highlight pre {
+    padding: 0px;
+}
