--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -42,6 +42,11 @@ ul.flat svg {
     margin-top: 35px;
 }
 
+h4.summary {
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
 /* AsciiDoctor*/
 table{border-collapse:collapse;border-spacing:0}
 .admonitionblock td.content>.title,.audioblock>.title,.exampleblock>.title,.imageblock>.title,.listingblock>.title,.literalblock>.title,.stemblock>.title,.openblock>.title,.paragraph>.title,.quoteblock>.title,table.tableblock>.title,.verseblock>.title,.videoblock>.title,.dlist>.title,.olist>.title,.ulist>.title,.qlist>.title,.hdlist>.title{text-rendering:optimizeLegibility;text-align:left;font-family:"Noto Serif","DejaVu Serif",serif;font-size:1rem;font-style:italic}
