Better header looks on small screen

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -48,6 +48,18 @@ h4.summary {
     margin-bottom: 15px;
 }
 
+@media only screen and (max-width: 670px) {
+    div.desktop {
+      display: none;
+    }
+}
+
+@media only screen and (min-width: 671px) {
+    div.mobile {
+      display: none;
+    }
+}
+
 /* AsciiDoctor*/
 table{border-collapse:collapse;border-spacing:0}
 .admonitionblock td.content>.title,.audioblock>.title,.exampleblock>.title,.imageblock>.title,.listingblock>.title,.literalblock>.title,.stemblock>.title,.openblock>.title,.paragraph>.title,.quoteblock>.title,table.tableblock>.title,.verseblock>.title,.videoblock>.title,.dlist>.title,.olist>.title,.ulist>.title,.qlist>.title,.hdlist>.title{text-rendering:optimizeLegibility;text-align:left;font-family:"Noto Serif","DejaVu Serif",serif;font-size:1rem;font-style:italic}
