Avoiding JS for loading feather icons

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -36,7 +36,11 @@ ul {
 
 ul.flat svg {
     max-height: 17px;
-    margin-top: 15px;
+}
+
+a svg {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .header nav {
