🔎 Adding serverless search

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -43,13 +43,77 @@ a svg {
     vertical-align: middle;
 }
 
-.header nav {
-    margin-top: 35px;
-}
-
 h4.summary {
     margin-top: 5px;
     margin-bottom: 15px;
+}
+
+.search-results .post h4.summary {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+
+.search-results .post h4.summary a b {
+    clear:both;background: rgb(255, 231, 92); padding:2px 2px;
+}
+
+.search-results .post div span b {
+    clear:both;background: rgb(255, 231, 92); padding:2px 2px;
+    font-weight: normal;
+}
+
+* {
+    box-sizing: border-box;
+  }
+
+div.club {
+    width: 180px;
+    margin-top: 10px;
+}
+
+.club input[type=text] {
+    padding: 4px;
+    font-size: 16px;
+    border: 1px solid rgb(226, 226, 226);
+    background: #f8f8f8;
+    border-right: 0px;
+    float: left;
+    width: 85%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+/*
+.club input:hover[type=text] {
+    border: 1px solid rgb(155, 155, 155);
+    border-right: 0px;
+}
+
+.club input:hover[type=text] + button {
+    border: 1px solid rgb(155, 155, 155);
+    border-left: none;
+}
+*/
+
+.club button {
+    float: left;
+    width: 15%;
+    padding: 4px;
+    background: #f8f8f8;
+    color: rgb(126, 126, 126);
+    font-size: 16px;
+    border: 1px solid rgb(226, 226, 226);
+    border-left: none;
+    cursor: pointer;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.club button:hover {
+    color: rgb(54, 54, 54);
 }
 
 @media only screen and (max-width: 670px) {
