--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -86,6 +86,10 @@ div.club {
     box-shadow: none !important;
 }
 
+.club input:focus[type=text] {
+    background: #ececec;
+}
+
 /*
 .club input:hover[type=text] {
     border: 1px solid rgb(155, 155, 155);
