--- a/static/css/base16.dark.css
+++ b/static/css/base16.dark.css
@@ -9,7 +9,7 @@
   background-color: #ac4142;
 }
 .highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
-  color: #505050;
+  color: #a0a0a0;
 }
 .highlight .cp {
   color: #f4bf75;
