[Desk] Adding blog post "What's on My Desk?"

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -132,6 +132,12 @@ div.club {
     }
 }
 
+.tweet-image > .content > a > img {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #dddddf;
+}
+
 /* AsciiDoctor*/
 table{border-collapse:collapse;border-spacing:0}
 .admonitionblock td.content>.title,.audioblock>.title,.exampleblock>.title,.imageblock>.title,.listingblock>.title,.literalblock>.title,.stemblock>.title,.openblock>.title,.paragraph>.title,.quoteblock>.title,table.tableblock>.title,.verseblock>.title,.videoblock>.title,.dlist>.title,.olist>.title,.ulist>.title,.qlist>.title,.hdlist>.title{text-rendering:optimizeLegibility;text-align:left;font-family:"Noto Serif","DejaVu Serif",serif;font-size:1rem;font-style:italic}
