--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -193,3 +193,29 @@ table.linenotable td.linenos {
 blockquote {
     font-size: 1.05rem;
 }
+
+.halign-left {
+    text-align: left;
+}
+
+table.stripes-even > tbody > tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+table.stripes-even > thead > tr {
+    background-color: #73ba30;
+    color: #f5feee;
+    font-weight: 100;
+}
+
+p.tableblock {
+    margin: 10px;
+}
+
+th.tableblock {
+    padding: 10px;
+}
+
+.text-center {
+    text-align: center;
+}
