Blog post "A Deep Dive Into Ingesting Debezium Events From Kafka With Flink SQL"

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -198,6 +198,11 @@ blockquote {
     text-align: left;
 }
 
+.valign-top {
+    vertical-align: top;
+}
+
+
 table.stripes-even > tbody > tr:nth-child(even) {
     background-color: #f2f2f2;
 }
