Adding short bio to post footer

--- a/static/css/morlingdev.css
+++ b/static/css/morlingdev.css
@@ -18,6 +18,28 @@
     border-radius: 50%;
 }
 
+.footer-image {
+    width: 100px !important;
+    height: 100px !important;
+    min-width: 100px;
+    min-height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.post-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    border: 1px solid #ddd;
+    background-color: #f8f8f8;
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 5px;
+}
+
 .pull-right {
     margin-left: auto;
 }
