--- a/assets/css/morlingdev.css
+++ b/assets/css/morlingdev.css
@@ -3,6 +3,13 @@ strong, b {
     font-weight: 700;
 }
 
+/* Teaser paragraph - same style as author bio */
+.teaser {
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
 /* Table of Contents - AsciiDoc native */
 .post-content {
     position: relative;
