--- a/assets/css/morlingdev.css
+++ b/assets/css/morlingdev.css
@@ -351,6 +351,47 @@ th.tableblock {
     text-align: center;
 }
 
+/* Related posts section */
+.related-posts {
+    margin-top: 1rem;
+    padding-top: 1rem;
+}
+
+.related-posts::before {
+    content: "◆ ◆ ◆";
+    display: block;
+    text-align: center;
+    color: #666;
+    margin-bottom: 2rem;
+    letter-spacing: 0.5em;
+}
+
+.related-posts h3 {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.related-posts ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.related-posts ul li {
+    margin-bottom: 0;
+    line-height: 1.6;
+}
+
+.related-posts li a {
+    font-weight: normal;
+}
+
+.related-posts li .meta {
+    color: #999;
+    font-size: 0.9rem;
+    margin-left: 0.5rem;
+}
+
 /* Wrapper for paragraphs with sidebar annotations */
 .openblock:has(.sidebarblock) {
     position: relative;
