--- a/assets/css/morlingdev.css
+++ b/assets/css/morlingdev.css
@@ -492,3 +492,24 @@ ul.posts li .meta,
         padding: 0.05em 0.5em;
     }
 }
+
+/* Inline code styling - only for code not inside pre blocks */
+code:not(pre code) {
+    font-family: "Courier New", Courier, monospace;
+    background-color: #f5f5f5;
+    color: #4b4b4b;
+    border: 1px solid #d3d3d3;
+    padding: 0.1em 0.4em;
+    border-radius: 3px;
+    font-size: 0.9em;
+}
+
+/* Image captions - regular italic text */
+.imageblock .title {
+    font-style: italic;
+    font-weight: normal;
+    font-size: 1rem;
+    text-align: left;
+    margin-top: 0.5em;
+    font-family: ubuntu,sans-serif;
+}
