--- a/assets/css/morlingdev.css
+++ b/assets/css/morlingdev.css
@@ -86,6 +86,16 @@ strong, b {
     text-decoration: underline;
 }
 
+/* Indent H3 items in ToC */
+#toc ul ul {
+    padding-left: 1em;
+    list-style: disc;
+}
+
+#toc ul ul li {
+    margin-bottom: 0.25em;
+}
+
 /* Post meta line with date and tags */
 .post-meta-line {
     display: flex;
