--- a/assets/css/morlingdev.css
+++ b/assets/css/morlingdev.css
@@ -503,12 +503,17 @@ ul.posts li .meta,
     }
 }
 
+/* Code font - JetBrains Mono for all code */
+pre,
+code {
+    font-family: "JetBrains Mono", monospace;
+}
+
 /* Inline code styling - only for code not inside pre blocks */
 code:not(pre code) {
-    font-family: "Courier New", Courier, monospace;
     background-color: #f5f5f5;
-    color: #4b4b4b;
-    border: 1px solid #d3d3d3;
+    color: #6e248b;
+    border: 1px solid #f5dcff;
     padding: 0.1em 0.4em;
     border-radius: 3px;
     font-size: 0.9em;
